# nebby

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
setup/: build.bat  build.sh  build_linux.sh  build_osx.sh  build_run_win.bat  build_win.bat  config_win.bat  setup.bat  setup_linux.sh  setup_osx.sh  setup_win.bat
src/: main.cpp
